crates/ars-components/src/utility/toggle_group/snapshots/ars_components__utility__toggle_group__tests__toggle_group_item_multiple_disabled_selected.snap
---
source: crates/ars-components/src/utility/toggle_group/mod.rs
expression: "snapshot_attrs(&multiple.connect(&|_| {}).item_attrs(&key(\"bold\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "item",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toggle-group",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-value",
            ),
            String(
                "bold",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Pressed,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
